# AI-Projects

./: .gitignore  README.md
RAG/: README.md  app.py  pyproject.toml  requirements.txt
RAG/data/text_files/: machine-learning.txt  python.txt
RAG/faiss_store/: faiss.index  metadata.pkl
RAG/notebook/: documents.ipynb  pdf_loader.ipynb
RAG/src/: data_loader.py
Sindhistory-RAG/: README.md  main.py  pyproject.toml
Sindhistory-RAG/faiss_store/: faiss.index  metadata.pkl
Sindhistory-RAG/src/: data_loader.py  embedding.py  vector_store.py
aiagent/: README.md  call_function.py  main.py  pyproject.toml  test.py
aiagent/functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
diabetes-readmission/: DSA Diabetes Report.docx  README.md  diabetes-redmission-notebook.ipynb
diabetes-readmission/data/: README.md
diabetes-readmission/model/: README.md
